--- a/form.html
+++ b/form.html
@@ -132,7 +132,7 @@
         <table>
             <tr>
                 <td>
-                    <textarea name="address" cols="171" rows="3">Address</textarea>
+                    <textarea name="address" cols="140 rows="3">Address</textarea>
                 </td>
             </tr>
         </table>
