--- a/form.html
+++ b/form.html
@@ -18,6 +18,9 @@
             float: right;
             margin: 30px;
         }
+        html{
+            border:black; border-width:5px; border-style:solid;
+        }
     </style>
 </head>
 <body>
@@ -208,9 +211,9 @@
                 <td>
                     <input name="file" type="file">
                 </td>
-            </tr>           
+            </tr>        
         </table> 
-        <button id="submit" type="submit">Submit</button>
+        <button id="submit" type="submit" style="justify-content: flex-end;">Submit</button>
     </form>
 </body>
 </html>
